# anyknowage

./: .editorconfig  .prettierrc  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: build_app.yml  build_docker.yml
install/ubuntu/: install.sh
server/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  worker.py
server/db/: __init__.py
server/db/mongo/: mongodb.py
server/db/vector/: vector_storage.py
server/models/: ai_models.py  basic_chat.py  basic_crawer.py  file.py  notify_leve.py  tempfile.py
server/modules/chat/: gpt.py
server/modules/crawer/: __init__.py  basic.py  github.py  gitlab.py  twitter.py
server/modules/crawler/: __init__.py  basic.py  github.py  gitlab.py  twitter.py
server/modules/knowladge/: audio.py  basic.py  image.py  knowledge.py  strtext.py  textfiles.py  url.py  video.py
server/routes/: chat.py  file.py  text.py  vector.py
server/socket_io/: __init__.py
server/test/data/: readme_EN.txt
server/util/: logger.py  readme_unmark.py
src/: App.svelte  app.html  app.pcss  hooks.client.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Greet.svelte  log.ts  socketio.ts  utils.ts
src/lib/components/: loadingcircle.svelte
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts  Counter.svelte  Header.svelte  Sidebar.svelte
src/routes/api/: +page.svelte
src/routes/archive/: +page.svelte  +page.ts  file-table-action.svelte  file-table-click.svelte  file-table.svelte
src/routes/chat/: +page.svelte  +page.ts
src/routes/setting/: +layout.svelte  +layout.ts  +page.svelte
src/routes/sverdle/: +page.server.ts  +page.svelte  game.test.ts  game.ts  reduced-motion.ts  (+1 more)
(+86 files in other folders)
